<resources>
    <string name="app_name">calculadora</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="clear">C</string>
    <string name="under">↩</string>
    <string name="result">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="times">x</string>
    <string name="division">÷</string>
    <string name="bhaskara">BHASKARA</string>
    <string name="resultBh">RESULTADOS</string>
    <string name="valA">Valor do termo A:</string>
    <string name="valB">Valor do termo B:</string>
    <string name="valC">Valor do termo C:</string>
    <string name="delta">"Valor de Delta: "</string>
    <string name="root1">"Raiz 1: "</string>
    <string name="raiz2">"Raiz 2: "</string>
</resources>