<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="475dp"
        android:layout_height="516dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <Button
                android:id="@+id/num1"
                android:layout_width="51dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/num2"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/num3"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num4"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num4"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/num5"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num5"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/num6"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num6"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num7"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num7"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/num8"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num8"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/num9"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear_text"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="clearResult"
                android:text="@string/clear"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/num0"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="setnum"
                android:text="@string/num0"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/under"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="eraseLast"
                android:text="@string/under"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/times"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="plusMinus"
                android:text="@string/times"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/minus"
                android:layout_width="134dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="plusMinus"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/plus"
                android:layout_width="108dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="plusMinus"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/division"
                android:layout_width="108dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="plusMinus"
                android:text="@string/division"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bhaskara"
                android:layout_width="108dp"
                android:layout_height="82dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="bhaskara"
                android:text="@string/bhaskara"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="407dp"
        android:layout_height="91dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="63dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:text="@string/result"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/equal"
        android:layout_width="308dp"
        android:layout_height="149dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="calc"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#FFFFFF"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>